full guide content

--- a/_pages/cityguider/stockholm/index.html
+++ b/_pages/cityguider/stockholm/index.html
@@ -48,7 +48,7 @@ features:
     description: >
       Nu när du befinner dig på Södermalm, framröstad till en av de trendigaste stadsdelarna i Europa av ett flertal internationella sajter, är en runda i öns många vintage- och secondhandbutiker ett måste. En bra utgångspunkt för jakten på unika och udda ting är området runt Mariatorget och Hornsgatan där det ligger både enklare secondhandaffärer som Stadsmissionen och Myrorna och tjusiga vintagebutiker med noga utvalda objekt. Till exempel kan du slinka in på Herr Judit Brandstationen där du hittar spännande inredning och inspiration till hemmet.
 
-  - id: café-pascal
+  - id: cafe-pascal
     time: "16:20"
     place: Café Pascal
     title: Gör ett fikastopp på prisbelönt Stockholmskafé med öga för detaljer
