guide content tweaks

--- a/_pages/guias-de-ciudades/bilbao/index.html
+++ b/_pages/guias-de-ciudades/bilbao/index.html
@@ -51,7 +51,7 @@ features:
   - id: museo-de-bellas-artes
     time: "18:00"
     place: Museo de Bellas Artes
-    title: #
+    title: Muros de historia y espíritu renovador
     description: >
       La historia del Museo de Bellas Artes de Bilbao se remonta al año 1908, pero es en el año 1945 cuando se inaugura, en 1962 cuando se declara Monumento Histórico-Artístico y en 2001 cuando se somete a la última ampliación. El resultado es un edificio que potencia la amplitud espacial y visual de las galerías, recuperando la visibilidad exterior del entorno ajardinado en el que se emplaza: el Parque de Doña Casilda. Sin duda, aquí tienes una cita de lujo con la arquitectura y el arte.
 
