lexus content tweaks

--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -2,9 +2,10 @@
 layout: lexus-ux
 id: lexus-ux
 nav: true
+nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
+title: The all-new Lexus UX
 intro: Head for your next urban adventure with the all new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
 
 intro-links:
@@ -31,7 +32,7 @@ features:
 
   - id: performance
     title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The all-new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
@@ -56,6 +57,6 @@ features:
 
   - id: config
     title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    description: With a range of options available, including the dynamic F&nbsp;SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
