--- a/_pages/city-guides/index.html
+++ b/_pages/city-guides/index.html
@@ -6,5 +6,5 @@ nav: true
 nav-order: 2
 
 title: City Guides
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quo qui fugit quis eligendi, repudiandae nemo est, quasi molestiae perspiciatis adipisci, aperiam repellendus eveniet rem natus pariatur doloremque. Nisi, obcaecati.
+intro: Lassen Sie sich von uns einen Tag lang von Sonnenaufgang bis in die Nacht auf urbane Entdeckungstouren durch Berlin und Hamburg begleiten. Unsere City-Guides zeigen Ihnen Design-Hotspots und Kultur-Highlights in der aufregendsten Stadt Europas und in der hanseatischen Hafenmetropole, die das Tor zur Welt ist.
 ---
