--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -4,61 +4,71 @@ id: design-hotels
 nav: true
 nav-order: 3
 
-title: Design Hotels
-intro: We’ve searched far and wide for the finest design hotels in the world. Where a concept-driven experience meets the finest architecture, interior and service, that is where you’re guaranteed something above indulgent five-star luxury. These hotels are as much about a perfect stay as they are about introducing you to something new, something beautiful, and something daring. Just see for yourself...
+title: Design-Hotels
+intro: "Zur Inspiration haben wir eine Liste außergewöhnlicher Design-Hotels für Sie zusammengestellt: Hier stimmen Konzept und Ambiente, aber auch Service und Interieur. Lassen Sie sich überraschen..."
 
 banner:
-  title: Best Design Hotels in the World
+  title: Die besten Design-Hotels der Welt
 
 features:
 
   - id: pumphouse-point-hotel
     title: Pumphouse Point Hotel
-    location: Tasmania, Australia
-    description: An obscure blob of white is surrounded in a wash of moody blue waters; this is Pumphouse Point Hotel, an old ‘30s hydroelectric station cast out in the middle of a beautiful forest lake. Taking the trip across the lengthy bridge is nothing short of cinematic. The interiors retain turn-of-the-century industrial features and effortlessly integrate them with understated modern flourishes. The views are stunning and the experience, out here, isolated in such natural beauty, is an unforgettable one...
+    location: Tasmanien, Australien
+    description: >
+      ie im Film fühlt sich, wer über die lange Brücke zum Pumphouse Point Hotel fährt, denn das jetzige Designhotel liegt mitten auf einem dunkel schimmernden Waldsee, untergebracht im Bau eines ehemaligen Wasserkraftwerks aus den 30er Jahren. Im Innern ergänzen sich Elemente der Industriearchitektur aus der Jahrhundertwende und moderne Details im zeitgenössischen Interieur. Die Aussicht ist umwerfend und die Erfahrung, in wunderschönen Natur zurückgezogen auf dem Wasser zu residieren, ein unvergessliches Erlebnis.
 
   - id: treehotel
     title: Treehotel
-    location: Harads, Sweden
-    description: Seven individually-designed treehouses hang in the forests of northern Sweden. Remarkable design reflects, hides, and playfully mirrors the forest setting – or, in the case of “UFO”, sticks out in such avant-garde fashion you could be forgiven for thinking you’ve entered some odd dreamscape. Inside each house, the tone is minimalist, never daring to distract from the main attraction – floor-to-ceiling windows that draw in spellbinding forest views.
+    location: Harads, Schweden
+    description: >
+      och im Norden in den schwedischen Wäldern warten sieben individuell gestaltete Unterkünfte in den Bäumen auf Gäste. Das extravagante Design fügt sich spielerisch in die Umgebung ein – und spiegelt im Wortsinn die Wildnis wider. Teilweise so avantgardistisch, dass sich keiner des Eindrucks erwehren kann, in Wahrheit in einer Traumlandschaft zu weilen. Typisch skandinavischer Minimalismus in der Einrichtung, bodentiefe Fenster und der faszinierende Ausblick in die umliegenden Wälder, die trotz der beeindruckenden Architektur der Baumhäuser immer Hauptattraktion bleiben – willkommen im Treehotel.
 
   - id: the-siam
     title: The Siam
     location: Bangkok, Thailand
-    description: Indulge in art-deco elegance on the banks of the river Chao Phraya. The white and black exterior, with its elongated windows and tower-like flanks, suggest some kind of jazz-age temple – a theme that the marbled and antique-filled interior continues. The wonderfully bright, galleried atrium is an impressive focal point, from which gorgeous rooms infuse the orient with turn-of-the-century style. Dark woods, freestanding baths, glorious amounts of light – The Siam perfects subtle elegance.
+    description: >
+      Erleben Sie feine Art-déco-Eleganz am Flußufer des Chao Phraya: Schwarz-weiße Fassaden, große Fensterfronten und turmartige Anbauten und Vorsprünge erinnern an die goldene Ära des Jazz – ein Thema, das sich auch im Inneren mit Marmor und antiken Details weiter fortsetzt. Das weitläufige, helle Atrium ist das offensichtliche Highlight der Hause, von hier gehen auch alle Zimmer ab. Es beeindruckt ein Mix aus Stilelementen, die Orient-Ambiente und klassische Details aus der Jahrhundertwende geschickt kombinieren. Auf den Zimmern finden Sie dunkles Holz, freistehende Badewannen und viel, viel Licht: Das Siam ist eine subtile Stilikone."
 
   - id: fogo-island-inn
     title: Fogo Island Inn
-    location: Newfoundland, Canada
-    description: At the weather-beaten edge of Newfoundland sits a striking, stilted, monolith of modern design; this is the Fogo Island Inn. The nearby fishing village is juxtaposed against this remarkable piece of architecture, but that’s as far as the division goes. In fact, the hotel serves the local community as much as the locals serve the hotel, in a noteworthy relationship that has regenerated the area. The kitchens rely on the local’s fishing know-how and guests are offered tours by local guides. Each room draws floor-to-ceiling sea views, making the sleek, modern design of each seem almost as if one is floating along in the hippest cruise ship on the seas.
+    location: Neufundland, Kanada
+    description: >
+      or der wilden Küste von Neufundland steht auf Stelzen ein markanter Monolith modernen Designs – das Fogo Island Inn. Das pittoreske Fischerdörfchen in der Nähe scheint in krassem Gegensatz zur Avantgarde-Architektur des Hotels zu stehen, tatsächlich befinden sich beide in einer bemerkenswerten Symbiose. Die gesamte Region wurde durch die Eröffnung des Konzepthotels neu belebt, man vertraut auf regionale Rezepte mit Meeresfrüchten und frischem Fisch in der Hotelküche und den Gästen wird mit geführten Touren das örtliche Leben und die spektakuläre Natur nahegebracht. Jedes Zimmer hat raumhohe Fenster aus denen man weit übers Meer die Felsenküste hinabblickt, immer im Gefühl auf einem eleganten Kreuzfahrtschiff die Wellen zu durchpflügen.
 
   - id: the-beekman
     title: The Beekman
     location: New York, USA
-    description: It’s rare for light to flood into a Manhattan townhouse; this light, here at the Beekman, becomes one of its most breathtaking assets. A pyramidal skylight floods the hotel’s atrium with the stuff, showing off the ornate detailing of each balcony, of each floor, as they stack atop each other and tower impressively over visiting guests. This is a definable “New York”-style elegance. The rooms follow suit, echoing turn-of-the-century glamour and simultaneously representing the melting pot of styles and influences that make the city so dynamic. To embody the flavour of a city so luxuriously is, by all accounts, a victory.
+    description: >
+      Einem von Tageslicht durchfluteten Townhouse in Manhattan begegnet man gar nicht so häufig – daher wird genau dieser Umstand im Beekman zu einem der atemberaubendsten Charakterzüge des Hotels: Ein pyramidenförmiges Oberlicht im Dach des Atriums lässt viel Sonne hinein, die die Verzierungen jedes Balkons und jedes Stockwerks ins rechte Licht zu setzen weiß. Ambiente der Extraklasse spiegelt sich auch in den Zimmern wider – ein Verschmelzen der Stile und Einflüsse, die diese Stadt so dynamisch machen. Das Lebensgefühl New Yorks wird hier in beeindruckender Weise neu interpretiert.
 
   - id: bisate-lodge
     title: Bisate Lodge
-    location: Ruhengeri, Rwanda
-    description: In the vibrant jungles of Rwanda, against the slopes of a volcanic cone, a clutch of thatched huts keep watch over the valley. The design is informed by the aboriginal architecture of the King’s Palace at Nyanza, a basket-weave oddity that plays on the cultural heritage of the country. The interiors afford beautiful mountain-jungle views, volcanic-stone fireplaces, handwoven rugs and blankets and earthy tones and materials throughout. It’s luxury through and through – but it also has eco-credentials that make any stay as sympathetic to the beautiful Rwandan landscape as possible.
+    location: Ruhengeri, Ruanda
+    description: >
+      Hoch am Berghang eines Vulkans im dichten Dschungel von Ruanda wachen Strohlodges über ein sattgrünes Tal. Inspiriert von traditioneller Architektur des einstigen Königssitzes von Nyanza und afrikanischer Flecht-Webtechnik, spielt die Bisate Lodge auf gelungene Weise mit dem kulturellen Erbe des Landes. Kamine und Feuerstellen aus Vulkangestein, handgefertigte Teppiche und Decken warten im Inneren der Lodges, aus denen sich ein wunderschöner Blick auf die umliegenden Berge bietet. Luxuriös und ökologisch nachhaltig übernachten Sie hier in atemberaubender Landschaft.
 
   - id: mashpi-lodge
     title: Mashpi Lodge
     location: Pichincha, Ecuador
-    description: Deep in the beguiling cloud forests of Ecuador lies Mashpi Lodge, an eco-wonder of glass, steel and luxury. Forget hiking endlessly for animal encounters; here you can kick back in the jacuzzi and spot monkeys and birds from the comfort of your hot, bubbly indulgence. This wilderness retreat makes the most of its surroundings, with floor-to-ceiling windows throughout ensuring that the forest remains centre stage. Rooms are minimalist yet retain a luxury feel, never taking attention away from the breathtaking views that lie outside.
+    description: >
+      Tief im Nebelwald in Ecuadors liegt die Mashpi Lodge, ein Öko-Wunder aus Glas, Stahl und dem gewissen Etwas. Auf ausgedehnte Expeditionen zur Beobachtung wilder Tiere müssen sich die Gäste hier nicht unbedingt begeben: Aus dem Whirlpool heraus sieht man Affen und exotische Vögel, während man sich völlig dem Luxus der sprudelnden Wärme hingeben kann. Das Refugium in der Wildnis weiß seine Umgebung perfekt in das Erholungserlebnis einzubeziehen: Mit großen Fensterfronten bleibt der Blick ins Freie gewahrt und minimalistisches Interieur mit dezentem Luxus stiehlt dem Naturerlebnis nie die Show.
 
   - id: royal-mansour
     title: Royal Mansour
-    location: Marrakech, Morocco
-    description: This is Moroccan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerising layout that is nothing short of spellbinding.
+    location: Marrakesch, Marokko
+    description: >
+      Marokkanische Palastpracht in royaler Form: Im Auftrag von König Mohammed VI arbeiteten hier die besten Handwerkes des Landes an kunstvollen Details und opulentem Dekor. Herrliche Fliesen, Schnitzkunst und verziertes Mobiliar sorgen in Verbindung mit atemberaubend aufmerksamem Service für wahrhaft königliche Erholung in Marrakesch. Der gesamte Komplex ist im Stil einer typisch marrokkanischen Medina gestaltet und sonnengeflutete Wege mit Wasserspielen verzaubern an jeder Ecke – ein blendendes Erlebnis.
 
   - id: awasi-patagonia
-    title: Awasi Patagonia
+    title: Awasi Patagonien
     location: Magallanes, Chile
-    description: Patagonia has long been a byword for remote, evocative and wild landscapes. An adventure here is to re-interpret what it means to escape; an adventure to Awasi, perhaps more so. Understated cubist villas, perched on the hillside of a beautiful private reserve, use raw natural materials and clean modern lines to create a living space as earthly as the mind-boggling views each affords. Each villa is also treated to a private guide with 4x4; each morning you can plan the day’s adventure, venturing into the wilderness of this beguiling landscape.
+    description: >
+      Patagonien steht für Abgeschiedenheit und rauhe und windumtoste Landschaft. Im Awasi Patagonia wird Abenteuer neu interpretiert und wirklich klar, welche Bedeutungstiefe dem Wort Alltagsflucht in der Realität tatsächlich gegeben werden kann. Mit Understatement präsentiert das Awawi kubistisch anmutende Villen mit klarer Linienführung entlang eines Berghangs in einem riesigen Privatreservat. Ökologische Nachhaltigkeit steht an zentraler Stelle und dem intensiven Naturerlebnis nichts im Wege: Gästen jeder Villa wird morgendlich ein privater Guide mit Geländewagen zur Verfügung gestellt, der bei der Planung der Tagesabenteuer in unglaublichem Panorama zur Seite steht.
 
   - id: deplar-farm
     title: Deplar Farm
-    location: Ólafsfjörður, Iceland
-    description: Hiding in the serene landscape of Iceland’s far north, Deplar Farm is a luxury hotel like no other. Once a sheep farm, the dark-stained wood and windswept turf roof retain the rustic heritage of the location. Inside, however, a clean modernist vision adds a touch of refinement to the wild surroundings. Amenities are numerous; this place may be remote, but you’ll not be left wanting at the farm. Exquisite dining, private excursions deep into the wilds, salmon fishing and heli-skiing – Deplar Farm makes for a profoundly luxurious Icelandic getaway.
+    location: Ólafsfjörður, Island
+    description: >
+      Erleben Sie Island authentisch und exklusiv: Auf der Deplar Farm im Norden Islands lebten einst fast nur Schafe, heute wird unter dem traditionellen Torfdach und hinter der wettergegerbten Holzfassade rustikaler Luxus mit atemberaubendem Naturpanorama zelebriert. Hinter dem typischen Äußeren offenbart sich eine modern-klare Vision von Innenarchitektur und Hospitality mit allem, was das Herz des anspruchsvoll Reisenden von heute begehrt: Fine-Dining, Heli-Skiing und privat geführte Exkursionen tief in die Wildnis der Vulkaninsel hinein.
 ---
