--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: Erleben Sie den Lexus UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Desing begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil vom Luxus für heute mit einem Lexus UX entdecken.
 
 intro-links:
 
@@ -14,48 +14,55 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own Lexus UX
+  - title: Konfigurieren Sie Ihren UX
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
-  - title: Find Out More
+  - title: Mehr entdecken
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
-feature-cta: Find Out More
+feature-cta: Mehr entdecken
 
 features:
 
   - id: self-charge
-    title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    title: Keine Aufladen. Kein Diesel. Keine Kompromisse.
+    description: >
+      Der Lexus UX lädt sich während der Fahrt selbstständig auf. Es müssen keine externen Ladestationen angefahren werden, es gibt keine Unterbrechungen auf Ihrer Reise. Ihre Fahrt wird mit der 4. Generation des Lexus-Hybridantriebs aus selbstladend hocheffizientem Elektromotor mit neu entwickelter Hybridschaltung und 4-Zylinder-Benzinmotor mit 2 Litern Hubraum auf sportlichen 178 PS zum Erlebnis.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: performance
-    title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    title: Leistung auf neuem Level
+    description: >
+      Sportlich-konturierte Sitze mit In-Control-Position für den Fahrer und ein niedriger Schwerpunkt mit stabilem Fahrwerk für agiles Fahrverhalten bei hoher Laufruhe sorgen für Coupé-Feeling an Bord dieses kompakten SUV, ideal für den Stadtverkehr. Der neue Lexus UX verbindet das aufregend unaufgeregte Gefühl von elektronischem Allrad-Antrieb mit dem Erlebnis der Effizienz der nächsten Automobilgeneration. Und mit einem Mindestverbrauch von 4.1 L/km bleibt mehr für das gewissen Extra an Luxus auf dem nächsten Städtetrip.
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
-    title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
+    title: Intelligentes Design
+    description: >
+      Dramatisch elegant und mit viel Persönlichkeit: der Lexus UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit diesem innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfect for the City
-    description: The Lexus UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
+    title: Perfekt für die Stadt
+    description: >
+      Der Lexus UX verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert durch das japanisches Architekturprinzip Engawa, womit Innen und Außen nahtlos miteinander verbunden werden. Das clevere Design ermöglicht es, die Größe des Fahrzeugs intuitiv aus der Fahrerposition zu erfassen und garantiert leichte Manövrierbarkeit in der Stadt.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: technology
-    title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    title: Innovation mit Imagination
+    description: >
+      Ein Panoramablick-Monitor erzeugt mit vier Videokameras einen 360-Grad-Blick um das Auto und auf die Umgebung. Mit dem integrierten Qi-kompatiblen, kabellosen Ladegerät stören keine Kabel mehr: Das Aufladen von Smartphones ist einfach über das Ladegerät möglich. So sind Sie für alle Arten von urbanen Erkundungen bereit.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: saftey
-    title: Progress with Confidence
-    description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
+    title: Fortschritt mit Umsicht und Sicherheit
+    description: >
+      Ein fortschrittliches Lexus Safety System+ der 2. Generation schützt Sie und Ihre Mitfahrer mit Funktionen wie dem Dynamic-Radar, Cruise-Control mit Straßenschild-Assistent, Pre-Collision-System und Spurhalteassistent. Durch die Ergänzung und Stärkung Ihrer fahrerischen Fähigkeiten verbessert das Lexus Safety System+ Ihre Sinne, sodass Sie sich auf allen bevorstehenden Reise immer sicher fühlen.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
-    title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    title: Konfigurieren
+    description: >
+      Erleben Sie Ihre Lexus-Erfahrung mit vielfältigen Optionen – auch der dynamische F SPORT ist dabei. Stellen Sie Ihr Traumauto jetzt online selbst zusammen.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
