--- a/_pages/hotels/index.html
+++ b/_pages/hotels/index.html
@@ -5,5 +5,5 @@ nav: true
 nav-order: 5
 
 title: Hotels
-intro: Browse our favourite design hotels in the UK and beyond and have your very own stylish getaway. Book any UK break and be in with the chance of using the new Lexus UX Self-Charging Hybrid during your escape.
+intro: Entdecken Sie unsere handverlesene Auswahl beliebter Design-Hotels in Deutschland und weltweit. Wer jetzt sein Lieblingshotel in Deutschland bucht, hat gleichzeitig die Gewinnchance auf den neuen Lexus UX mit selbstladendem Hybridantrieb für die Dauer des gesamten Trips.
 ---
