--- a/_pages/index.html
+++ b/_pages/index.html
@@ -4,9 +4,9 @@ id: overview
 nav: true
 nav-order: 1
 
-title: Overview
+title: Panoramica
 
 banner:
   title: Lexus
-  title-sub: The Design Collection
+  title-sub: Design Collection
 ---
