--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: La tua prossima avventura urbana è al volante del nuovissimo Lexus UX, l'ibrido elettronico di quarta generazione che si fa notare per il suo design accattivante e un corpo vettura sofisticato. Scopri gli angoli più cool della città, passando dai grattacieli futuristici alle gallerie d'arte contemporanea, alla guida di un crossover dal carattere deciso. Prova i comfort di lusso e lo stile esclusivo di Lexus UX con un test drive di 24 ore.
 
 intro-links:
 
@@ -14,48 +14,48 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own Lexus UX
+  - title: Configura il tuo UX Hybrid
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
-  - title: Find Out More
+  - title: Scopri di più
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
-feature-cta: Find Out More
+feature-cta: Scopri di più
 
 features:
 
   - id: self-charge
-    title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    title: Zero compromessi
+    description: Lexus UX è la nuova frontiera dell'ibrido che si autoricarica autonomamente durante la guida, senza richiedere noiose soste durante il viaggio. Grazie alla tecnologia di quarta generazione, UX Hybrid è dotato dell'avanzato sistema Lexus Self-Charging Hybrid  con una motorizzazione 2.0L, che abbina efficienza nei consumi e prestazioni fluide.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: performance
-    title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    title: Prestazioni elevate
+    description: Il baricentro ribassato e il telaio ad alta rigidità permettono a UX Hybrid di offrire una dinamica di guida precisa. Il tutto è ulteriormente migliorato da stabilizzatori aerodinamici straordinari, ingegnosamente incorporati nel design dei passaruota e delle luci posteriori, che offrono estrema tenuta in velocità. Il nuovo Lexus UX giustappone le prestazioni della E-FOUR a quattro ruote motrici con un'efficienza di ultima generazione, raggiungendo fino a 68,9 mpg, ideale per risparmiare carburante durante un weekend fuoriporta.
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
-    title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
+    title: Design intelligente
+    description: Il nuovo UX Hybrid grazie al suo design audace, esprime una forza inconfondibile. La sua distintiva mascherina, la silhouette sportiva e le superfici elegantemente scolpite nella parte posteriore, faranno girare la testa in città. Una nuovissima generazione di crossover, costruita  per esplorare nuovi orizzonti durante la tua fuga urbana. Lexus UX è un'aggiunta elegante e sofisticata alla tua avventura.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfect for the City
-    description: The Lexus UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
+    title: Perfetta per la città
+    description: Lexus UX vanta il più ampio campo visivo della sua categoria, ispirato al principio architettonico giapponese Engawa, in cui l'interno e l'esterno sono perfettamente collegati, consentendo una coesistenza più armoniosa con l'ambiente circostante. Questo design intelligente ti consente di percepire le dimensioni del veicolo, quindi è più facile da manovrare in città.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: technology
-    title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    title: Tecnologia innovativa
+    description: Goditi un'eccezionale vista a 360° della vettura e di ciò che la circonda, grazie alle quattro videocamere e allo schermo da 10,3 pollici del Panoramic View Monitor. Il caricatore wireless compatibile Qi, permette di caricare un dispositivo come lo smartphone semplicemente appoggiandolo sul supporto dedicato. Dovrai solo lasciarti guidare!
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: saftey
-    title: Progress with Confidence
-    description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
+    title: Sicurezza migliorata
+    description: Grazie al nuovo sistema di sicurezza Lexus Safety Sistem +, UX HYBRID può beneficiare di un pacchetto di dispositivi straordinariamente completo, incluso il sistema di pre-collisione con rilevamento pedoni; l’allarme di allontanamento dalla corsia di marcia con assistenza al rilevamento di corsia, fari abbaglianti automatici, radar di controllo della velocità di crociera dinamico e riconoscimento dei segnali stradali. Per rendere il tuo viaggio in auto sempre più sicuro.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
-    title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    title: Configurazione personalizzata
+    description: Grazie a un'ampia gamma di opzioni disponibili, tra cui l'esclusiva versione F SPORT, potrai personalizzare Lexus UX a seconda delle tue esigenze. Visita il sito internet ufficiale e configura sin da ora il crossover ibrido dei tuoi sogni.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
