--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -57,6 +57,6 @@ features:
 
   - id: config
     title: Configurator
-    description: With a range of options available, including the dynamic F&nbsp;SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    description: With a range of options and grades available, including the dynamic F&nbsp;SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
